syntax = "proto3";

package services;

service GetObjectAcl {
  rpc GetObjectAcl (Request) returns (Response);
}

message Request {
  string bucketName = 1; 
  string objectName = 2;
  string requesterUName = 3;
}

message Response {
  uint32 statusCode = 1;
  string objectACL = 2;
}